# diploma

./: .gitignore
human_pose_estimation/: README.md
human_pose_estimation/common/calibration/: calibration_utils.py  stereo_triangulation.py
human_pose_estimation/common/compare/: compare_all_methods.py
human_pose_estimation/common/io_schema/: schema_description.md
human_pose_estimation/common/metrics/: bone_metrics.py  common_metrics.py  confidence_adapters.py
human_pose_estimation/common/playback/: play_video_and_2d.py  play_video_and_3d.py
human_pose_estimation/docker/: Dockerfile  Dockerfile.openpose  README.md  docker-compose.yml  entrypoint.sh  requirements-hpe.txt  requirements-mmpose.txt
human_pose_estimation/double_cameras/mmpose_voxelpose/: README.md  requirements.txt
human_pose_estimation/double_cameras/openpose_3d/: README.md
human_pose_estimation/double_cameras/stereo_triangulation/: README.md  requirements.txt
media_pipe/: analyze_runs.py  mp_pose_research.py  mp_pose_research_opt.py  play_pose3d_matplotlib.py  test.py
workspace/: .dockerignore  .gitignore  README.md  docker-compose.yml
workspace/docker/: Dockerfile  entrypoint.sh
workspace/scripts/: check_host.sh  kill_gazebo.sh
workspace/src/h1_description_ros2/: CMakeLists.txt  package.xml
workspace/src/h1_description_ros2/launch/: display.launch.py  gazebo_light.launch.py
workspace/src/h1_description_ros2/urdf/: h1.urdf  h1_gazebo_light.urdf
workspace/src/h1_teleop_test/: package.xml  setup.cfg  setup.py
workspace/src/h1_teleop_test/h1_teleop_test/: upper_body_cmd_pub.py
(+55 files in other folders)
