<?xml version="1.0"?>
<package format="3">
  <name>h1_description_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for the official Unitree H1 description</description>
  <maintainer email="zahar@example.com">zahar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
