<?xml version="1.0"?>
<package format="3">
  <name>h1_teleop_test</name>
  <version>0.0.1</version>
  <description>Test teleoperation pipeline for Unitree H1 upper body</description>
  <maintainer email="zahar@example.com">zahar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
